--- a/package.json
+++ b/package.json
@@ -4,39 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node server",
+    "dev": "cross-env NODE_ENV=development node ./server.js",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --ssrManifest --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
-    "preview": "cross-env NODE_ENV=production node server"
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "serve": "cross-env NODE_ENV=production node ./server.js"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@iconify/react": "^4.1.1",
-    "@tanstack/react-query": "^5.18.0",
-    "axios": "^1.6.7",
     "compression": "^1.7.4",
-    "dompurify": "^3.0.8",
     "express": "^4.18.2",
-    "framer-motion": "^11.0.3",
-    "gsap": "^3.12.5",
-    "locomotive-scroll": "^5.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.3",
-    "sirv": "^2.0.4",
-    "swiper": "^11.0.5",
-    "zod": "^3.22.4"
+    "sirv": "^2.0.4"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.18.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "cross-env": "^7.0.3",
-    "sass": "^1.69.5",
     "vite": "^5.0.10"
   }
 }
